    - upgrade eggs versions in plone configuration files
    - better handle of kgs, and mr.developer buildouts
    - add inheritance in the plone configuration parser
    - added some tests for the plone configuration parser
    - activated the minitage.plone4 template (beta state)
    - support for staging development (get state from production)
    - blobstorage support

1.3.149
----------

    - plone3 template maintenance
    - plone3 auto project buildbot support
    - nginx instance
    - init.d files coherence
    - flickr api patch on plone3
    - testrunner parts
    - plomino moved to be used with mr.developer
    - add hudson support to minitage.plone3

1.3.114
----------------

    - distribute fix
    - add tinymce
    - plone3 template maintenance
    - fix pack [thx to jpc]
    - relayout the plone templates
    - plone: support for solr
    - plone: support for supervisord
    - plone: support for haproxy

1.3.103
---------

    - fix #7 thx to joka

1.3.102
----------

    - fix #8 thx to joka

1.3.100
-------------

    - better integration of z3cform
    - let us have i18ndude

1.3.99
-----------

    - bump ipython to 0.10
    - pin z3c.form
    - fix PATH bug in gentoo function helpers
    - fix zeo integration
    - update distribute buildout
    - add pilwotk for non minitage users helper
    - add five.grok zcml order
    - add collective.z3cform.grok

0.91
-------

    - add support for installing Quills, the plone Blog suite.
    - fix plone3 default buildout code
    - switch recipe names to new minitage.recipe recipes
    - plone3 template refactoring
    - atreal.patchfss fix
    - paster quiet option handled correctly
    - distribute instead of setuptools
    - cheetah requirement fix because of ugly zopeskel version pinning
    - add facultystaff to plone3
    - make plone3 paster customizable via configuration files (xml)
    - maintenance on the postgresql instance (8.4.1)
    - let zeo part be there, everytime.