@@ -14,6 +14,8 @@ Up
     - activated the minitage.plone4 template (beta state)
     - support for staging development (get state from production)
     - blobstorage support
+    - transmogrifier support
+    - devmode support
 
 1.3.149
 ----------
